--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "next": "13.4.10",
     "postcss": "8.4.26",
     "react": "18.2.0",
+    "react-countdown": "^2.3.5",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
+    "swiper": "^10.0.4",
     "tailwindcss": "3.3.3"
   }
 }
